--- a/src/app.css
+++ b/src/app.css
@@ -31,7 +31,8 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 2em;
   line-height: 1.1;
 }
 
