--- a/src/app.css
+++ b/src/app.css
@@ -27,13 +27,14 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 70vh;
 }
 
 h1 {
   font-family: 'Courier New', Courier, monospace;
   font-size: 2em;
   line-height: 1.1;
+  margin: 0px;
 }
 
 .card {
