--- a/src/app.css
+++ b/src/app.css
@@ -70,7 +70,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #d9c1c1;
   }
   a:hover {
     color: #747bff;
